--- a/PortfolioShreyas/templates/index.html
+++ b/PortfolioShreyas/templates/index.html
@@ -149,13 +149,13 @@ https://templatemo.com/tm-464-ultra-profile
           <div class="col-md-4 col-sm-4">
             <div class="work-wrapper">
               <i class="devicon-java-plain-wordmark colored" style="font-size: 95px; "></i> <br> <br>
-              <h3 class="text-uppercase tm-work-h3">Online Examination System</h3>
+              <h3 class="text-uppercase tm-work-h3">Air Piano using Python and OpenCV</h3>
               
               <p>
-                <strong>Oct 2019 - Dec 2019</strong><br><br>
+                <strong>July 2020 - August 2020</strong><br><br>
                
                
-                The main objective of online test  is to efficiently evaluate the candidate thoroughly through a fully automated system that not only saves lot of time but also gives fast results with the help of JAVA.
+                It is a mixture of music and coding where we can play piano virtually without having one. I developed it using Python and OpenCV.
                 
               </p>
             </div>
